feat(mcq): rewrite Q28-Q29 in java-modules with multi-line educational format
Q28 (good module design): correct=D, distractors target export-all, open-module
abuse, and layered modules anti-pattern.

Q29 (typical mistakes): correct=B, distractors confuse requires/opens, propose
removed --illegal-access flag, and falsely claim Spring/JPMS incompatibility.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>